--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">        
-                    <img src="img/logo.svg" alt="images/logo.svg">
+                    <img src="img/logo.svg" alt="лого">
                 </div>
                 <nav class="nav">
                         <div class="navi1"><a class="nav_link" href="#">Клиентам</a></div>
                         <div class="navi2">
-                            <a href="#"><img src="img/account.svg" alt="images/account.svg""></a>
+                            <a href="#"><img src="img/account.svg" alt="аккаунт"></a>
                             <a class="nav_link" href="#">Войти</a>
                         </div>
                 </nav>
@@ -32,7 +32,7 @@
                 <span>IT платформа по быстрому поиску автомобиля <br> от официальных дилеров РФ</span>
             </div>
             <div class="intro_picture">
-                <img src="img/Car&man.svg" alt="images/Car&man.svg">
+                <img src="img/Car&man.svg" alt="автомобиль и мужчина">
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
                     <p>Дополнительный канал потенциальных клиентов, готовых приобрести автомобиль, без затрат на рекламу и маркетинг.</p>
                 </div>
                 <div class="picture_features">
-                    <img src="img/Time.svg" alt="images/Time.svg">
+                    <img src="img/Time.svg" alt="время">
                 </div>
             </div>
             <div class="features_item">
@@ -54,7 +54,7 @@
                     <p>Вы получаете запросы сразу же после отправки клиентом.</p>
                 </div>
                 <div class="picture_features">
-                    <img src="img/Speed.svg" alt="images/Speed.svg">
+                    <img src="img/Speed.svg" alt="скорость">
                 </div>
             </div>
             <div class="features_item">
@@ -63,7 +63,7 @@
                     <p>В каждой заявке указан регион поиска, марка и модель авто, а так же  индивидуальные запросы клиента.</p>
                 </div>
                 <div class="picture_features">
-                    <img src="img/Information.svg" alt="images/Information.svg">
+                    <img src="img/Information.svg" alt="инфо">
                 </div>
             </div>
             <div class="features_item">
@@ -73,7 +73,7 @@
                         с клиентом с возможностью отправки документов.</p>
                 </div>
                 <div class="picture_features">
-                    <img src="img/Chat.svg" alt="images/Chat.svg">
+                    <img src="img/Chat.svg" alt="чат">
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <h4>Регистрируйся и получай <br> актуальные запросы на автомобили <br> от заинтерисованных клиентов</h4>
             </div>
             <div class="footer_image">
-                <img src="img/Group 55.png" alt="images/Group 55.png">
+                <img src="img/Group 55.png" alt="группа 55">
             </div>
         </div>
     </div>
